--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
-    
+    <meta name="google-site-verification" content="FUEhG3Fz7d4wv5JDSUAxIkfgkSgRepgdXonbzeShbi4" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://13-weeks-from-today.vercel.app/">
     
